src/styles/_footer.scss
.footer {
  padding: 180px 20px 81px;

  background-color: $b-blue;
  border-top-right-radius: $b-radius-xl;

  &__top {
    margin: 0 auto;

    max-width: 1063px;

    display: flex;
    justify-content: stretch;
  }

  &__block {
    &_first {
      margin-right: 226px;

      @media (max-width: $adapt-break + 400px) {
        margin-right: 80px;
      }
    }

    &_second {
      margin: 0;

      @media (max-width: $adapt-break + 100px) {
        width: 300px;
        text-align: center;
      }
    }
  }

  &__title {
    margin: 0 0 56px;

    @extend %h1;
    font-size: 32px;
    line-height: 150%;

    color: #fff;

    @media (max-width: $adapt-break + 100px) {
      text-align: center;
    }
  }

  &__subtitle {
    margin: 0 0 8px;

    @extend %h3;
    line-height: 19px;

    color: #fff;
    opacity: 0.5;

    transition: opacity $hover-duration;
  }

  &__text {
    display: block;
    margin-bottom: 48px;
    @extend %p-bold;

    font-size: 24px;
    line-height: 150%;

    text-decoration: none;
    color: #fff;

    transition: opacity $hover-duration;

    &:hover {
      box-shadow: 0 9px 18px rgba(255, 255, 255, 0.03);
      opacity: 0.7;
    }
  }

  &__socials-wrapper {
    display: flex;
    
    @media (max-width: $adapt-break + 100px) {
      justify-content: center;
    }
  }

  &__socials {
    margin: 8px 32px 0 0;

    width: 32px;
    height: 32px;

    transition: opacity $hover-duration;

    &_facebook {
      @include socials("../images/logo/facebook.svg");
    }

    &_twitter {
      @include socials("../images/logo/twitter.svg");
    }

    &_instagram {
      @include socials("../images/logo/instagram.svg");
    }

    &:hover {
      opacity: 0.7;
    }

    @media (max-width: $adapt-break + 100px) {
      margin: 8px auto 0;
    }
  }

  &__bottom {
    margin: 121px auto 0;
    width: 1063px;

    display: flex;
    justify-content: space-between;
  }

  &__logo {
    margin-left: 0;
  }

  @media (max-width: $adapt-break + 150px) {
    &__nav {
      display: none;
    }
  }
}

@media screen and (max-width: $adapt-break + 100px) {
  .footer {
    padding: 90px 20px 81px;
    &__top {
      margin: 0 auto;

      max-width: 300px;

      flex-direction: column;
    }

    &__block_first {
      margin: 0 0 100px;
    }
  }
}

